--- a/ThesaurusBot/ThesaurusBot/ThesaurusBot.csproj
+++ b/ThesaurusBot/ThesaurusBot/ThesaurusBot.csproj
@@ -124,9 +124,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WordResponse.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+    <None Include="Properties\PublishProfiles\ThesaurusBot.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
