only speak when ur spoken to

--- a/ThesaurusBot/ThesaurusBot/Web.config
+++ b/ThesaurusBot/ThesaurusBot/Web.config
@@ -7,8 +7,8 @@
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
     <add key="BotId" value="YourBotId" />
-    <add key="MicrosoftAppId" value="cab68b29-7bc3-4e83-ad6f-a57c7e25ffec" />
-    <add key="MicrosoftAppPassword" value="6yckLqHduMsuiEw1VXCuTjh" />
+    <add key="MicrosoftAppId" value="52f210bf-57bb-4b64-b164-71f0612d5f32" />
+    <add key="MicrosoftAppPassword" value="T0CgJVS5TUsVQ6pA3utidOH" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
