--- a/ThesaurusBot/ThesaurusBot/ThesaurusBot.csproj
+++ b/ThesaurusBot/ThesaurusBot/ThesaurusBot.csproj
@@ -128,7 +128,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
-    <None Include="Properties\PublishProfiles\ThesaurusBot.pubxml" />
+    <None Include="Properties\PublishProfiles\SynonymsBot.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
